--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "##f5f5f5"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
